MODIFY: The updater will no longer automatically close the window when it is in an ERROR state, making it easier for users to view the logs